--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "express": "^4.18.3",
     "mongoose": "^6.8.4",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.12",
+    "nodemailer": "^6.9.12"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
