--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm i"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
